# scarfs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: index.rst
scarfs/: __init__.py  _fixed_point.py  _homeomorphisms.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_homeomorphisms.py  test_scarfs.py
typings/numba/: __init__.pyi
typings/pytest_benchmark/: fixture.pyi
