[project]
name = "scarfs"
version = "0.2.2"
description = "find approximate fixed points of bounded vector valued functions"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numba>=0.61.0", "numpy>=2.1.3"]
keywords = [
    "fixed-point",
    "simplex",
    "simplotope",
    "hypercube",
    "scarf",
    "brouwer",
    "numba",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[[project.authors]]
name = "Erik Brinkman"
email = "erik.brinkman@gmail.com"

[project.urls]
Documentation = "https://erikbrinkman.github.io/scarfs/"
Repository = "https://github.com/erikbrinkman/scarfs"
Issues = "https://github.com/erikbrinkman/scarfs/issues"

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
    "scipy>=1.15.2",
    "sphinx>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
strict = ["scarfs", "tests"]

[tool.ruff.lint]
extend-select = ["I", "D", "A", "B", "W", "PL", "UP", "FIX"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--cov scarfs --cov-report term-missing -m 'not long'"
markers = ["long: long-running benchmarks"]

[tool.uv]
keyring-provider = "subprocess"
